--- a/DC.html
+++ b/DC.html
@@ -56,6 +56,7 @@
                         <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
                         <br />
                         <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                        <p><a href="http://bit.ly/3QerJM7">【短文】Cinema（CWT62認親文公開）（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2023.1.1</font></p>
                         <p><a href="https://bit.ly/3dGLQDu">【短文】あしたの夜（CWT61認親文公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2022.8.13</font></p>
                         <p><a href="https://bit.ly/3t8BYaU">【短文】白色情人節賀文2022</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2022.3.14</font></p>
                         <p><a href="http://bit.ly/39R1KqC">【短文】初雪（CWT56無料公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
@@ -164,7 +165,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/11/19 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/1/1 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
@@ -197,4 +198,3 @@
     <script src="./album/scripts.js"></script>
 
 </body>
-</html>
