--- a/article/apex/darksparks006.html
+++ b/article/apex/darksparks006.html
@@ -81,7 +81,7 @@
                       &emsp;&emsp;「只是覺得⋯⋯我們是被祝福著啊。」<br/>
                       </p>
                       <p>
-                      &emsp;&emsp;若世上的幸與不幸，總何為零，那麼完美的結局，肯定是花掉了雙人份的幸福吧。
+                      &emsp;&emsp;若世上的幸與不幸，總和為零，那麼完美的結局，肯定是花掉了雙人份的幸福吧。
                       </p>
                       
                       <br /><br />
@@ -128,7 +128,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/2/14 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/2/15 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
