--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
           </div>
       </section>
 
+      <!--咒術迴戰-->
+      <section class="row tm-section tm-col-md-reverse">
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="tm-flex-center p-5">
+                  <div class="tm-md-flex-center">
+                      <h2 class="tm-text-color-primary mb-4"><strong>Jujutsu Kaisen｜咒術迴戰</strong></h2>
+                      <p class="mb-4"><strong>五夏｜</strong>五條悟 x 夏油傑</p>
+                      <p class="mb-4"><strong>五棘｜</strong>五條悟 x 狗卷棘</p>
+                      <a href="./JUJU.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+              <div class="tm-flex-center p-5 tm-bg-color-primary">
+                  <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                      <p class="tm-text-color-white small tm-font-thin mb-0">他們一遍又一遍地親著、吻著，五條拆開夏油的髮圈，夏油扯亂五條的頭髮。於是除了五條眼裡那片藍天外，再也沒有任何東西砸下來。</p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
       <!-- 5th Section #5B616A -->
       <section class="row tm-section tm-mb-30">
@@ -148,7 +168,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/7/7 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
