--- a/JGI.html
+++ b/JGI.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -87,6 +87,18 @@
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/JGI/img003.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img003.jpg" class="img-responsive"><span>2021.12.29 太瓜了阿暈（VRC瓜）</span></a>
                     </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/JGI/img004.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img004.jpg" class="img-responsive"><span>2022.12.25 聖誕老瓜</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/JGI/img005.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img005.jpg" class="img-responsive"><span>2023.1.23 旗袍拜年瓜</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/JGI/img006.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img006.jpg" class="img-responsive"><span>2023.5.14 棕蛋冠軍瓜</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/JGI/img007.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img007.jpg" class="img-responsive"><span>2023.6.30 棕蛋冠軍瓜</span></a>
+                    </li>
                     
                 </ul>
 
@@ -104,7 +116,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/9/2 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/7/7 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
