--- a/article/juju/gogego003.html
+++ b/article/juju/gogego003.html
@@ -93,7 +93,7 @@
                              &emsp;&emsp;夏油忙著把零零落落的東西歸位，五條則趴在床上，兩條長胳膊掛在外頭，懶洋洋地把滾到床底下的雜物用手掃出來。<br />
                              &emsp;&emsp;夏油在書桌邊撿起摔在地上的相框。相片是高專入學前與父母親在家門口前的合影，也是他帶來高專宿舍唯一的一張照片。夏油索性把照片抽出來，然後把壞了的框扔進垃圾桶。<br />
                              &emsp;&emsp;「啊，居然碎掉了！」五條探頭過來，「下次要買壓克力的啦！玻璃又重又危險。」<br />
-                             &emsp;&emsp;夏油本想拿膠把照片貼在牆上就好，可看著躺回床上舉高雙手對空比劃著各種款式的新相框的五條，決定把這東西加入代購清單中。<br />
+                             &emsp;&emsp;夏油本想拿膠把照片貼在牆上就好，可看著躺回床上舉高雙手對空比劃著各種款式的新相框的五條，決定把這東西加入待購清單中。<br />
                              &emsp;&emsp;不只這張相片，進了高專後認識了好多人，有了好多新的回憶。他可以多買幾個，反正還有點空間，放上穿高專制服的入校合影，放和五條、家入、夜蛾老師的合照，放完成任務後一起去甜點鋪的照片，放五條蠢斃了的睡顏。<br />
                              &emsp;&emsp;「嗯哼，那就麻煩五條少爺幫忙買單了！」<br />
                              &emsp;&emsp;夏油話音才剛落，地面又開始搖晃。「餘震？」<br />
