--- a/article/toribe/toramai001.html
+++ b/article/toribe/toramai001.html
@@ -94,8 +94,8 @@
                         </p>
                         <p>
                         8.<br/>
-                        武小道聲嘶力竭的哭泣聲逐漸遠去，破損水泥和裸露扭曲鋼筋之間的那片碧藍色天空卻逐漸清晰。他們都在那裡，真一郎、艾瑪、堅仔、場地、大家......有海風，有舒芙蕾和鮮奶油，有響徹夜空的巴布排氣管聲，和神社前一整片黑壓壓的鼓噪，黑旗高揚，歡聲雷動，響徹雲霄。<br/>
-                        </p>
+                        &emsp;&emsp;武小道聲嘶力竭的哭泣聲逐漸遠去，破損水泥和裸露扭曲鋼筋之間的那片碧藍色天空卻逐漸清晰。他們都在那裡，真一郎、艾瑪、堅仔、場地、大家......有海風，有舒芙蕾和鮮奶油，有響徹夜空的巴布排氣管聲，和神社前一整片黑壓壓的鼓噪，黑旗高揚，歡聲雷動，響徹雲霄。<br/>
+                      </p>
                       
                       <br /><br />
                       <p>Fin.</p>
