--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         renderPage = false;
     }
   </script>
+  <style>
+    .p-0 { 
+    display: none;
+    }
+    @media only screen and (min-width:989px) {
+      .p-0 { display: block; }
+    }
+  </style>
 
 </head>
 
