--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
     }
   </script>
   <style>
-    .p-0 { 
+    .p-0, .p-1 { 
     display: none;
     }
     @media only screen and (min-width:989px) {
       .p-0 { display: block; }
     }
+    @media only screen and (max-width:989px) {
+      .p-1 { display: block; }
+    }
+    
   </style>
+
 
 </head>
 
@@ -64,8 +69,9 @@
           <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="tm-flex-center p-5">
                   <div class="tm-md-flex-center">
-                      <h2 class="tm-text-color-primary mb-4"><strong>DC｜名偵探柯南</strong></h2>
+                      <h2 class="tm-text-color-primary mb-4"><strong>Detective Conan｜名偵探柯南</strong></h2>
                       <p class="mb-4"><strong>赤安｜</strong>赤井秀一 x 安室透（降谷零）</p>
+                      <p class="mb-4"><strong>降谷｜</strong>降谷中心、降谷夢女</p>
                       <a href="./DC.html" class="btn btn-primary tm-md-align-center">Read more</a>
                   </div>
               </div>
@@ -79,12 +85,12 @@
           </div>
       </section>
 
-      <!--惡靈華森-->
+      <!--APEX-->
       <section class="row tm-section tm-col-md-reverse">
           <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
               <div class="tm-flex-center p-5 tm-bg-color-primary">
                   <div class="tm-max-w-400 tm-flex-center tm-flex-col">
-                      <p class="tm-text-color-white small tm-font-thin mb-0">請一直待在有我的時空裡，好嗎？</p>
+                      <p class="tm-text-color-white small tm-font-thin mb-0">細緻的米白色碎粉漂浮在她們之間，遠處一隻又大又美、隱隱閃著幽暗藍光的水母悠悠飄過。她們在不見底的深海舞台上跳舞、在潔白炫目的光芒下相擁。</p>
                   </div>
               </div>
           </div>
@@ -120,11 +126,14 @@
           </div>
       </section>
 
+
       <!-- 5th Section #5B616A -->
       <section class="row tm-section tm-mb-30">
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0">
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0 p-0">
               <a href="./Tools.html"><img src="img/image-05-2.PNG" alt="Image" class="img-fluid"></a>
-
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0 p-1">
+            <a href="./Tools.html"><img src="img/image-05-2-2.PNG" alt="Image" class="img-fluid"></a>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-lg-4 pr-xl-0 mb-4 mb-lg-0">
               <div class="tm-flex-center">
@@ -136,8 +145,6 @@
                       <div class="tm-pricing-body">
                           <ul class="tm-feature-list">
                               <li>感謝大家願意閱讀我的文章，如果有任何心得、建議、指教，歡迎在這裡告訴我，我會認真看所有的回饋的，謝謝大家 ( 鞠躬 )！</li>
-                              <li> </li>
-                              <li>內有許願池 ( ？ )</li>
                           </ul>
                           <a href="https://forms.gle/RPq17dtsuf6qe1CD7" class="btn btn-secondary">　點　此　進　入　</a>
                       </div>
@@ -176,7 +183,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/7/7 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/25 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
