--- a/DC.html
+++ b/DC.html
@@ -114,6 +114,9 @@
                 -->
                 <ul id="Grid" class="row">
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img015.jpg" data-rel="prettyPhoto"><img src="./img/DC/img015.jpg" class="img-responsive"><span>2023.8.27 魔王零</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/DC/img014.jpg" data-rel="prettyPhoto"><img src="./img/DC/img014.jpg" class="img-responsive"><span>2022.10.31 沖矢先生的萬聖燉糖果</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
@@ -166,7 +169,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/20 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
