--- a/DC.html
+++ b/DC.html
@@ -31,6 +31,15 @@
         }
     </script>
 
+    <style>
+    .p-0{ 
+    display: none;
+    }
+    @media only screen and (min-width:992px) {
+      .p-0 { display: block; }
+    }
+    </style>
+
 </head>
 
 <body>
@@ -97,7 +106,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+            <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0 p-0">
                 <img src="img/dc-con.jpg" alt="Image" class="img-fluid">
             </div>
         </section>
