--- a/APEX.html
+++ b/APEX.html
@@ -29,6 +29,14 @@
         }
     </script>
 
+    <style>
+        .p-0{ 
+        display: none;
+        }
+        @media only screen and (min-width:992px) {
+          .p-0 { display: block; }
+        }
+    </style>
 </head>
 
 <body>
@@ -64,7 +72,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0 p-0">
               <img src="img/apex-con.jpg" alt="Image" class="img-fluid">
           </div>
       </section>
@@ -111,7 +119,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/2/14 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
