--- a/TORIBE.html
+++ b/TORIBE.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -21,6 +21,15 @@
         renderPage = false;
     }
   </script>
+
+  <style>
+    .p-0{ 
+    display: none;
+    }
+    @media only screen and (min-width:992px) {
+      .p-0 { display: block; }
+    }
+  </style>
 
 </head>
 
@@ -51,7 +60,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0 p-0">
               <img src="img/toribe-con.jpg" alt="Image" class="img-fluid">
           </div>
       </section>
@@ -88,7 +97,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
