--- a/Tools.html
+++ b/Tools.html
@@ -50,6 +50,7 @@
                          <br />
                          <h5 class="mb-4 tm-text-color-primary">▍ 抽籤系統</h5>
                          <p><a href="./Draw.html">今日宜閱讀〇〇本</a></p>
+                         <p><a href="./Draw_emo.html">表情符號抽抽樂</a></p>
                          <br />
                          <h5 class="mb-4 tm-text-color-primary">▍ 日語學習</h5>
                          <p><a href="./JP_toEN.html">平假名自主練習與查詢</a></p>
@@ -76,7 +77,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/28 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
