--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,13 +62,13 @@
     <form action="#" method="get" class="row tm-container-inner tm-contact-form">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <div class="form-group">
-          <input type="text" id="top1" autocomplete="off" class="form-control" placeholder="Top 1" required/>
+          <input type="text" id="top1" autocomplete="off" class="form-control" placeholder="Top 1"/>
         </div>
         <div class="form-group">
-          <input type="text" id="top2" autocomplete="off" class="form-control" placeholder="Top 2" required/>
+          <input type="text" id="top2" autocomplete="off" class="form-control" placeholder="Top 2"/>
         </div>
         <div class="form-group">
-          <input type="text" id="top3" autocomplete="off" class="form-control" placeholder="Top 3" required/>
+          <input type="text" id="top3" autocomplete="off" class="form-control" placeholder="Top 3"/>
         </div>
         <div class="form-group">
           <select id="theme">
@@ -83,7 +83,8 @@
           </select>
         </div>
         <div class="col-xs-12 mt-4 tm-center">
-          <button type="submit" class="btn btn-primary" onclick="createImg()"><font size="4">生成圖片</font></button>
+          <button class="btn btn-primary" onclick="createImg()"><font size="4">生成圖片</font></button>
+          <button class="btn btn-primary" id="dwnButton" onclick="dwnImg()" disabled><font size="4">下載圖片</font></button>
         </div>
       </div>
 
