--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -27,11 +27,11 @@
     #storyBox{
       height: 272px;
     }
-    #canvasCont{
+    /* #canvasCont{
       width: 300px;
-    }
+    } */
     @media only screen and (max-width:767px) {
-      #canvasCont { padding: 30px 25px; }
+      #canvasCont { padding: 20px 15px; }
     }
     #myCanvas {
       width: 100%; /* Canvas宽度为div的100% */
@@ -88,16 +88,11 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
         <canvas id="myCanvas" width="1080" height="1920"></canvas>
       </div>
-      
-      <!--
-      <div class="col-xs-12 mt-4 tm-center">
-        <a href="#" class="btn btn-primary tm-md-align-center" onclick="createStory()"><font size="4">生成故事</font></a>
-      </div>
-      -->
+
     </form>
   </div>
   <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
