--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
   <link rel="stylesheet" href="../../css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
   <link rel="stylesheet" href="../../css/templatemo-style.css">                                     <!-- Templatemo style -->
+  <link rel="stylesheet" href="../../css/loader.css">
   <script src="../../js/top3.js"></script>
 
   <script>
@@ -76,8 +77,10 @@
             <option value="dark_green">日式焙茶</option>
             <option value="light_green">初春暖風</option>
             <option value="light_purple">葡萄汁</option>
+            <option value="light_bright">彈珠汽水</option>
             <option value="light_blue">夏日青空</option>
             <option value="dark_blue">無盡宇宙</option>
+            <option value="dark_pink">彩糖</option>
             <option value="dark_red">血紅夕陽</option>
             <option value="light_gray">銀河灰</option>
           </select>
@@ -87,6 +90,8 @@
           <button class="btn btn-primary" id="dwnButton" onclick="dwnImg()" disabled><font size="4">下載圖片</font></button>
         </div>
       </div>
+
+      <div id="loader2" class="loader2"></div>
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
