--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -96,8 +96,9 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
         <canvas id="myCanvas" width="1080" height="1920"></canvas>
+        <img src="./44780276.png" id="imgtest" >
       </div>
-
+      
     </form>
   </div>
   <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
