--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -34,7 +34,7 @@
     @media only screen and (max-width:767px) {
       #canvasCont { padding: 20px 15px; }
     }
-    #myCanvas {
+    #myCanvas, #imgtest {
       width: 100%; /* Canvas宽度为div的100% */
       height: auto; /* 让Canvas的高度自动调整以保持纵横比 */
       display: block; /* 去除默认的行内元素样式 */
@@ -57,7 +57,7 @@
       <!-- 6th Section -->
 <section class="row">
   <div class="col-lg-12 tm-form-header pl-5 pr-5">
-    <h2 class="tm-container-inner tm-text-color-white">Top 3 產生器</h2>
+    <h2 class="tm-container-inner tm-text-color-white">Top 3 產生器【測試中】</h2>
   </div>
   <div class="col-lg-12 pl-2 pl-sm-3 pl-md-5 pr-2 pr-sm-3 pr-md-5">
     <form action="#" method="get" class="row tm-container-inner tm-contact-form">
@@ -96,7 +96,7 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
         <canvas id="myCanvas" width="1080" height="1920"></canvas>
-        <img src="./44780276.png" id="imgtest" >
+        <img src="" id="imgtest" >
       </div>
       
     </form>
