--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -57,7 +57,7 @@
       <!-- 6th Section -->
 <section class="row">
   <div class="col-lg-12 tm-form-header pl-5 pr-5">
-    <h2 class="tm-container-inner tm-text-color-white">Top 3 產生器【測試中】</h2>
+    <h2 class="tm-container-inner tm-text-color-white">Top 3 產生器</h2>
   </div>
   <div class="col-lg-12 pl-2 pl-sm-3 pl-md-5 pr-2 pr-sm-3 pr-md-5">
     <form action="#" method="get" class="row tm-container-inner tm-contact-form">
@@ -95,7 +95,7 @@
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
-        <canvas id="myCanvas" width="1080" height="1920"></canvas>
+        <canvas id="myCanvas" width="1080" height="1920" style="display: none;"></canvas>
         <img src="" id="imgtest" >
       </div>
       
@@ -121,7 +121,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/9/24 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/9/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
