--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -49,6 +49,9 @@
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
   </div>
+  <div id="overlay">
+    <div id="loader2" class="loader2"></div>
+  </div>
 
   <div class="container">
 
@@ -91,7 +94,7 @@
         </div>
       </div>
 
-      <div id="loader2" class="loader2"></div>
+      
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="canvasCont" style="display: none;" >
         <!-- <canvas id="myCanvas" width="342" height="608"></canvas> -->
