--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -83,9 +83,15 @@
             <option value="light_bright">彈珠汽水</option>
             <option value="light_blue">夏日青空</option>
             <option value="dark_blue">無盡宇宙</option>
-            <option value="dark_pink">彩糖</option>
+            <option value="dark_pink">莓果雷根糖</option>
             <option value="dark_red">血紅夕陽</option>
             <option value="light_gray">銀河灰</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <select id="typesetting">
+            <option value="ticket">長途車票</option>
+            <option value="books">奇幻書屋</option>
           </select>
         </div>
         <div class="col-xs-12 mt-4 tm-center">
