--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -66,13 +66,13 @@
     <form action="#" method="get" class="row tm-container-inner tm-contact-form">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <div class="form-group">
-          <input type="text" id="top1" autocomplete="off" class="form-control" placeholder="Top 1"/>
+          <input type="text" id="top1" autocomplete="off" class="form-control" placeholder="Top 1" maxlength="9"/>
         </div>
         <div class="form-group">
-          <input type="text" id="top2" autocomplete="off" class="form-control" placeholder="Top 2"/>
+          <input type="text" id="top2" autocomplete="off" class="form-control" placeholder="Top 2" maxlength="9"/>
         </div>
         <div class="form-group">
-          <input type="text" id="top3" autocomplete="off" class="form-control" placeholder="Top 3"/>
+          <input type="text" id="top3" autocomplete="off" class="form-control" placeholder="Top 3" maxlength="9"/>
         </div>
         <div class="form-group">
           <select id="theme">
@@ -130,7 +130,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/9/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/9/30 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
