--- a/article/toribe/doramai001.html
+++ b/article/toribe/doramai001.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -94,12 +94,12 @@
                         </p>
                         <p>
                         8.<br/>
-                        &emsp;&emsp;武小道聲嘶力竭的哭泣聲逐漸遠去，破損水泥和裸露扭曲鋼筋之間的那片碧藍色天空卻逐漸清晰。他們都在那裡，真一郎、艾瑪、堅仔、場地、大家......有海風，有舒芙蕾和鮮奶油，有響徹夜空的巴布排氣管聲，和神社前一整片黑壓壓的鼓噪，黑旗高揚，歡聲雷動，響徹雲霄。<br/>
+                        武小道聲嘶力竭的哭泣聲逐漸遠去，破損水泥和裸露扭曲鋼筋之間的那片碧藍色天空卻逐漸清晰。他們都在那裡，真一郎、艾瑪、堅仔、場地、大家......有海風，有舒芙蕾和鮮奶油，有響徹夜空的巴布排氣管聲，和神社前一整片黑壓壓的鼓噪，黑旗高揚，歡聲雷動，響徹雲霄。<br/>
                         </p>
                       
                       <br /><br />
                       <p>Fin.</p>
-                      <p>2023.8.22.&nbsp;&nbsp;墨兒&infin;</p>
+                      <p>2023.10.1.&nbsp;&nbsp;墨兒&infin;</p>
                       <br /><p>－</p><br />
                       
                       <p><font size="2" color="#999999"><strong>1 → Draken和三谷的龍圖騰塗鴉</strong></font></p>
@@ -137,7 +137,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/10/1 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
