--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
   <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
 
+  <script src="js/GitHubAPI.js"></script>
   <script>
     var renderPage = true;
 
@@ -23,7 +24,7 @@
     }
   </script>
   <style>
-    .p-0, .p-1 { 
+    .p-0, .p-1, #fusu-white{ 
     display: none;
     }
     @media only screen and (min-width:989px) {
@@ -32,7 +33,9 @@
     @media only screen and (max-width:989px) {
       .p-1 { display: block; }
     }
-    
+    @media only screen and (max-width:989px) {
+      #fusu-white  { display: block; }
+    }
   </style>
 
 
@@ -126,6 +129,25 @@
           </div>
       </section>
 
+      <!--東京復仇者-->
+      <section class="row tm-section tm-col-md-reverse">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <div class="tm-flex-center p-5 tm-bg-color-primary">
+                <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                    <p class="tm-text-color-white small tm-font-thin mb-0">有海風，有舒芙蕾和鮮奶油，有響徹夜空的巴布排氣管聲，和神社前一整片黑壓壓的鼓噪，黑旗高揚，歡聲雷動，響徹雲霄。</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <div class="tm-md-flex-center">
+                    <h2 class="tm-text-color-primary mb-4"><strong>Tokyo Revengers｜東京卍復仇者</strong></h2>
+                    <p class="mb-4"><strong>龍麥｜</strong>龍宮寺堅 x 佐野萬次郎</p>
+                    <a href="./TORIBE.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                </div>
+            </div>
+        </div>
+      </section>
 
       <!-- 5th Section #5B616A -->
       <section class="row tm-section tm-mb-30">
@@ -183,7 +205,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/25 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/10/1 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
@@ -203,6 +225,5 @@
   });
 
 </script>
-
 </body>
 </html>
