--- a/article/tool/top3.html
+++ b/article/tool/top3.html
@@ -92,6 +92,7 @@
           <select id="typesetting">
             <option value="ticket">長途車票</option>
             <option value="books">奇幻書屋</option>
+            <option value="map">心靈指南</option>
           </select>
         </div>
         <div class="col-xs-12 mt-4 tm-center">
@@ -130,7 +131,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/9/30 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/10/8 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
