--- a/Tools.html
+++ b/Tools.html
@@ -55,6 +55,9 @@
                          <h5 class="mb-4 tm-text-color-primary">▍ 日語學習</h5>
                          <p><a href="./JP_toEN.html">平假名自主練習與查詢</a></p>
                          <p><a href="./JP_toEN_2.html">片假名自主練習與查詢</a></p>
+                         <br />
+                         <h5 class="mb-4 tm-text-color-primary">▍ 創作工具</h5>
+                         <p><a href="./article/tool/ConvertDPI.html">DPI與稿件尺寸計算機</a></p>
                          <br /><br />
                          <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
@@ -77,7 +80,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/8/28 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
