--- a/article/tool/refGen.html
+++ b/article/tool/refGen.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -60,7 +60,7 @@
       <!-- 6th Section -->
 <section class="row">
   <div class="col-lg-12 tm-form-header pl-5 pr-5">
-    <h2 class="tm-container-inner tm-text-color-white">稿件參考線產生器 -(功能開發中)</h2>
+    <h2 class="tm-container-inner tm-text-color-white">稿件參考線產生器 -(測試中)</h2>
   </div>
   <div class="col-lg-12 pl-2 pl-sm-3 pl-md-5 pr-2 pr-sm-3 pr-md-5">
     <form action="#" method="get" class="row tm-container-inner tm-contact-form">
@@ -80,10 +80,10 @@
         <!--書封-->
         <div id="book" style="display:none">
           <div class="form-group">
-            <input type="number" id="custom_width_b" autocomplete="off" class="form-control" placeholder="寬度（mm）"/>
+            <input type="number" id="custom_width_b" autocomplete="off" class="form-control" placeholder="封面寬度（mm）"/>
           </div>
           <div class="form-group">
-            <input type="number" id="custom_height_b" autocomplete="off" class="form-control" placeholder="高度（mm）"/>
+            <input type="number" id="custom_height_b" autocomplete="off" class="form-control" placeholder="封面高度（mm）"/>
           </div>
           <div class="form-group">
             <input type="number" id="custom_back_b" autocomplete="off" class="form-control" placeholder="書背尺寸（mm）"/>
@@ -170,7 +170,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/10 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/12 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
