--- a/article/tool/convertDPI.html
+++ b/article/tool/convertDPI.html
@@ -52,10 +52,10 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <div class="form-group">
           <p>&#10112; 紙張尺寸 + 解析度 &rarr; 檔案大小</p>
-          <input type="text" id="mm_1" autocomplete="off" class="form-control" placeholder="紙張尺寸（mm）"/>
+          <input type="number" id="mm_1" autocomplete="off" class="form-control" placeholder="紙張尺寸（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="dpi_1" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
+          <input type="number" id="dpi_1" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
         </div>
         <div class="form-group">
           <input type="text" id="px_1" autocomplete="off" class="form-control" placeholder="檔案大小（px）" disabled/>
@@ -63,10 +63,10 @@
         <br>
         <div class="form-group">
           <p>&#10113; 檔案大小 + 解析度 &rarr; 紙張尺寸</p>
-          <input type="text" id="px_2" autocomplete="off" class="form-control" placeholder="檔案大小（px）"/>
+          <input type="number" id="px_2" autocomplete="off" class="form-control" placeholder="檔案大小（px）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="dpi_2" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
+          <input type="number" id="dpi_2" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
         </div>
         <div class="form-group">
           <input type="text" id="mm_2" autocomplete="off" class="form-control" placeholder="紙張尺寸（mm）" disabled/>
@@ -74,10 +74,10 @@
         <br>
         <div class="form-group">
           <p>&#10114; 紙張尺寸 + 檔案大小 &rarr; 解析度</p>
-          <input type="text" id="mm_3" autocomplete="off" class="form-control" placeholder="紙張尺寸（mm）"/>
+          <input type="number" id="mm_3" autocomplete="off" class="form-control" placeholder="紙張尺寸（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="px_3" autocomplete="off" class="form-control" placeholder="檔案大小（px）"/>
+          <input type="number" id="px_3" autocomplete="off" class="form-control" placeholder="檔案大小（px）"/>
         </div>
         <div class="form-group">
           <input type="text" id="dpi_3" autocomplete="off" class="form-control" placeholder="解析度（dpi）" disabled/>
@@ -94,22 +94,22 @@
           </select>
         </div>
         <div class="form-group">
-          <input type="text" id="h_4" autocomplete="off" class="form-control" placeholder="高度（mm）"/>
+          <input type="number" id="h_4" autocomplete="off" class="form-control" placeholder="高度（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="w_4" autocomplete="off" class="form-control" placeholder="寬度（mm）"/>
+          <input type="number" id="w_4" autocomplete="off" class="form-control" placeholder="寬度（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="back_4" autocomplete="off" class="form-control" placeholder="書背尺寸（mm）"/>
+          <input type="number" id="back_4" autocomplete="off" class="form-control" placeholder="書背尺寸（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="fold_4" autocomplete="off" class="form-control" placeholder="折口尺寸（mm）"/>
+          <input type="number" id="fold_4" autocomplete="off" class="form-control" placeholder="折口尺寸（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="bleed_4" autocomplete="off" class="form-control" placeholder="出血尺寸（mm）"/>
+          <input type="number" id="bleed_4" autocomplete="off" class="form-control" placeholder="出血尺寸（mm）"/>
         </div>
         <div class="form-group">
-          <input type="text" id="dpi_4" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
+          <input type="number" id="dpi_4" autocomplete="off" class="form-control" placeholder="解析度（dpi）"/>
         </div>
         <!--
         <div class="form-group">
@@ -161,7 +161,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/12 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
