--- a/article/tool/refGen.html
+++ b/article/tool/refGen.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../../css/templatemo-style.css">                                     <!-- Templatemo style -->
   <link rel="stylesheet" href="../../css/loader.css">
   <script src="../../js/refGen.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/psd.js@3.1.2/dist/psd.min.js"></script>
 
   <script>
     var renderPage = true;
@@ -134,7 +135,7 @@
         </div>
 
         <div class="col-xs-12 mt-4 tm-center">
-          <button class="btn btn-primary" onclick="createImg()"><font size="4">生成</font></button>
+          <button class="btn btn-primary" onclick="createImg()"><font size="4">預覽</font></button>
           <button class="btn btn-primary" id="dwnImgButton" onclick="dwnImg()" disabled><font size="4">JPEG</font></button>
           <button class="btn btn-primary" id="dwnPsdButton" onclick="dwnPsd()" disabled><font size="4">PSD</font></button>
         </div>
