--- a/TORIBE.html
+++ b/TORIBE.html
@@ -49,6 +49,7 @@
                       <h2 class="mb-4 tm-text-color-primary"><strong>Tokyo Revengers｜東京卍復仇者</strong></h2>
                       <br />
                       <h5 class="mb-4 tm-text-color-primary">▍ 龍麥</h5>
+                      <p><a href="https://bit.ly/3SeigGb">【極短】龍的去向．Draken</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2024.1.26</font></p>
                       <p><a href="https://bit.ly/3PEUZM1">【極短】龍的去向．Mikey</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2023.10.1</font></p>
 
                       <!-- 新增目錄備用
@@ -97,7 +98,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/10/1 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2024/1/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
