--- a/DC.html
+++ b/DC.html
@@ -123,6 +123,9 @@
                 -->
                 <ul id="Grid" class="row">
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img017.jpg" data-rel="prettyPhoto"><img src="./img/DC/img017.jpg" class="img-responsive"><span>2024.2.10 赤龍迎春</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/DC/img016.jpg" data-rel="prettyPhoto"><img src="./img/DC/img016.jpg" class="img-responsive"><span>2023.10.7 看不見髮際線的男人</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
@@ -181,7 +184,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/11/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2024/2/16 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
