--- a/JGI.html
+++ b/JGI.html
@@ -97,7 +97,7 @@
                         <a href="./img/JGI/img006.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img006.jpg" class="img-responsive"><span>2023.5.14 棕蛋冠軍瓜</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/JGI/img007.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img007.jpg" class="img-responsive"><span>2023.6.30 棕蛋冠軍瓜</span></a>
+                        <a href="./img/JGI/img007.jpg" data-rel="prettyPhoto"><img src="./img/JGI/img007.jpg" class="img-responsive"><span>2023.6.30 23歲生日賀圖</span></a>
                     </li>
                     
                 </ul>
@@ -116,7 +116,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2023/7/7 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2024/4/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
