--- a/index.html
+++ b/index.html
@@ -149,6 +149,41 @@
         </div>
       </section>
 
+      
+      <!--哈瓜+復甦島-->
+      <section class="row tm-section tm-col-md-reverse">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <div class="tm-md-flex-center">
+                    <h2 class="tm-text-color-primary mb-4"><strong>Jongie｜哈瓜哈瓜</strong></h2>
+                    <p class="mb-4"><strong>囧子｜</strong>APEX英雄、VR Chat、V皮ver.</p>
+                    <a href="./JGI.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                </div>
+            </div>
+        </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+              <div class="tm-flex-center p-5 tm-bg-color-primary">
+                  <div class="tm-md-flex-center">
+                      <h2 class="tm-text-color-primary mb-4" style="color: white"><strong>復甦島</strong></h2>
+                      <p class="mb-4" style="color: lavenderblush"><strong>復甦島1｜</strong>瓜仔、葵思碧、袁承凱等角色</p>
+                      <p class="mb-4" style="color: lavenderblush"><strong>復甦島2｜</strong>瓜仔、阿星等角色</p>
+                      <a href="./FUSU.html" class="btn btn-primary tm-md-align-center" style="background-color: white; color: #993333">Read more</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6" id="fusu-white">
+            <div class="tm-flex-center p-5 ">
+                <div class="tm-md-flex-center">
+                    <h2 class="tm-text-color-primary mb-4"><strong>復甦島</strong></h2>
+                    <p class="mb-4"><strong>復甦島1｜</strong>瓜仔、葵思碧、袁承凱等角色</p>
+                    <p class="mb-4"><strong>復甦島2｜</strong>瓜仔、阿星等角色</p>
+                    <a href="./FUSU.html" class="btn btn-primary tm-md-align-center" >Read more</a>
+                </div>
+            </div>
+        </div>
+      </section>
+
+
       <!-- 5th Section #5B616A -->
       <section class="row tm-section tm-mb-30">
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0 p-0">
@@ -205,7 +240,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2023/12/31  | <a href="./Timeline.html">更新日誌</a> | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2024/4/26  | <a href="./Timeline.html">更新日誌</a> | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
