--- a/HQ.html
+++ b/HQ.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>待墨濃時 - HQ</title>
+  <title>待墨濃時 - Haikyu!!</title>
   <link rel="icon" href="./img/icon.ico" type="image/x-icon">
   
     <!-- load CSS -->
@@ -46,7 +46,7 @@
              <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
                  <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
                      <div class="tm-md-flex-center">
-                         <h2 class="mb-4 tm-text-color-primary"><strong>HQ｜排球少年</strong></h2>
+                         <h2 class="mb-4 tm-text-color-primary"><strong>Haikyu!!｜排球少年</strong></h2>
                          <br/>
                          <h5 class="mb-4 tm-text-color-primary">Miya Twins 宮雙子</h5>
                          <p><a href="https://bit.ly/4gGxb7g">【侑治侑】100%</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2024.9.21</font></p>
