--- a/index.html
+++ b/index.html
@@ -183,6 +183,26 @@
         </div>
       </section>
 
+      <!--排球少年-->
+      <section class="row tm-section tm-col-md-reverse">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <div class="tm-flex-center p-5 tm-bg-color-primary">
+                <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                    <p class="tm-text-color-white small tm-font-thin mb-0">他們的愛從出生那刻起就開始，紐帶般的絲線從一股化為兩股，自此一路糾纏，今生今世，從未分離。</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <div class="tm-md-flex-center">
+                    <h2 class="tm-text-color-primary mb-4"><strong>Haikyu!!｜排球少年</strong></h2>
+                    <p class="mb-4"><strong>宮雙子｜</strong>宮侑、宮治</p>
+                    <a href="./HQ.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                </div>
+            </div>
+        </div>
+      </section>
+
 
       <!-- 5th Section #5B616A -->
       <section class="row tm-section tm-mb-30">
@@ -240,7 +260,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2024/4/26  | <a href="./Timeline.html">更新日誌</a> | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2024/10/5  | <a href="./Timeline.html">更新日誌</a> | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> star_fall22 | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
