--- a/article/hq/miyatwins001.html
+++ b/article/hq/miyatwins001.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>待墨濃時 - 100%</title>
+  <title>待墨濃時 - 100%（Fighting!運動會認親無料公開）</title>
     <link rel="icon" href="../../img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
@@ -38,7 +38,7 @@
              <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
                  <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
                      <div class="tm-md-flex-center">
-                      <h2 class="mb-4 tm-text-color-primary"><strong>100%</strong></h2>
+                      <h2 class="mb-4 tm-text-color-primary"><strong>100%（Fighting!運動會認親無料公開）</strong></h2>
                       <br/>
                       <p>侑治侑短篇</p>
                       <p><font size="2" color="#999999"><strong>宮侑x宮治x宮侑 無差</strong></font></p>
